--- a/index.njk
+++ b/index.njk
@@ -76,7 +76,7 @@ permalink: "/"
       </div>
     </div>
 
-    <div class="card">
+    <div class="card center-narrow">
       <h3 class="font-primary" style="font-size:1.25rem;margin:.25rem 0 .4rem">Para familias</h3>
       <ul style="margin:0;padding-left:1.1rem">
         <li>Niños bienvenidos · <strong>cuna</strong> bajo petición.</li>
